test/libsolidity/syntaxTests/revertStatement/at_file_level.sol
revert X();
// ----
// ParserError 2314: (8-9): Expected ';' but got '('
